cmake_minimum_required(VERSION 3.16)
project(demos)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 20)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY TRUE)

add_subdirectory(gro)
add_subdirectory(gtype)
add_subdirectory(kfprobe)
add_subdirectory(x11gl)
add_subdirectory(gst)
add_subdirectory(drm)
add_subdirectory(kmsgrab)
add_subdirectory(gbm)
add_subdirectory(rdesktop-rtt)
add_subdirectory(QCustomPlot)
add_subdirectory(x11)
add_subdirectory(ffmpeg)
add_subdirectory(igmp)
add_subdirectory(imgui)
add_subdirectory(third)
add_subdirectory(udp)
add_subdirectory(tcp)
add_subdirectory(detect-mounts)
add_subdirectory(jspawnhelper)
